...
    <string name="campaign_level_ember_path">Тропа углей</string>
    <string name="campaign_level_body">Доступный локальный уровень</string>
    <string name="campaign_level_setup_action">Подготовить уровень</string>
    <string name="campaign_level_setup_title">Подготовка уровня</string>
    <string name="campaign_new_setup_body">Этот локальный забег готов к доступной настройке.</string>
    <string name="campaign_unfinished_setup_body">Незавершённый локальный забег готов к продолжению.</string>
    <string name="campaign_unfinished_title">Незавершённый забег</string>
    <string name="campaign_unfinished_body">Локальный забег ожидает продолжения. Продолжите его или вернитесь к выбору кампании.</string>
    <string name="campaign_unfinished_panel_description">Панель продолжения незавершённого забега</string>
    <string name="campaign_cancel_action">Отмена</string>
    <string name="campaign_continue_action">Продолжить</string>
    <string name="battle_setup_title">Подготовка боя</string>
    <string name="battle_setup_body">Выберите начальный путь, затем продолжите подготовку.</string>
    <string name="battle_setup_choice_a">Начальный путь А</string>
    <string name="battle_setup_choice_b">Начальный путь Б</string>
    <string name="battle_setup_choice_c">Начальный путь В</string>
    <string name="battle_setup_selected">Выбрано: %1$s</string>
...
    <string name="active_battle_wave">Волна: %1$d / %2$d</string>
    <string name="active_battle_base_health">База: %1$d / %2$d</string>
    <string name="active_battle_enemies_state">Враги на поле: %1$d</string>
    <string name="active_battle_paused">Бой на паузе</string>
    <string name="active_battle_tile_empty">Точка строительства %1$d: свободна</string>
    <string name="active_battle_tile_occupied">Точка строительства %1$d: башня, уровень %2$d</string>
    <string name="active_battle_build_popup_title">Построить башню</string>
    <string name="active_battle_upgrade_popup_title">Улучшить башню</string>
    <string name="active_battle_build_popup_body">Постройка башни стоит %1$d ресурса.</string>
    <string name="active_battle_upgrade_popup_body">Следующий уровень: %1$d. Стоимость: %2$d ресурса.</string>
    <string name="active_battle_upgrade_max_body">Эта башня уже достигла максимального уровня.</string>
    <string name="active_battle_build_confirm">Построить</string>
    <string name="active_battle_upgrade_confirm">Улучшить</string>
    <string name="active_battle_popup_close">Закрыть</string>
...
